--- a/Application/src/main/res/values/template-dimens.xml
+++ b/Application/src/main/res/values/template-dimens.xml
@@ -29,4 +29,8 @@
     <dimen name="horizontal_page_margin">@dimen/margin_medium</dimen>
     <dimen name="vertical_page_margin">@dimen/margin_medium</dimen>
 
+    <dimen name="btn_reg_text_size">12sp</dimen>
+    <dimen name="reg_home_tiltle_padding">10dip</dimen>
+    <dimen name="reg_layout_margin">10dp</dimen>
+
 </resources>
