--- a/Application/src/main/res/layout/camera_view_fragment.xml
+++ b/Application/src/main/res/layout/camera_view_fragment.xml
@@ -13,13 +13,13 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent">
 
     <sequoia.hack.CameraFitTextureView
         android:id="@+id/texture"
-        android:layout_width="1000dip"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="420dip"/>
 
-</RelativeLayout>
+</FrameLayout>
